<resources>
    <string name="app_name">Fitbook</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_account_sign_up">Don\'t have account? Sign Up</string>
    <string name="register_new_account">Register new account</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_my_password">Forgot my password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="exercises">Exercises</string>
    <string name="community">Community</string>
    <string name="profile">Profile</string>
    <string name="about_us">About Us</string>
    <string name="music_player">Music Player</string>
    <string name="about_us_description">
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam pretium pretium enim, a tristique odio euismod at.
Vestibulum quis orci sed ex rhoncus accumsan quis in velit. Maecenas sit amet dui nec nisi lacinia varius.
Nullam et est nec sem condimentum posuere. Nullam iaculis magna mi, quis condimentum sapien bibendum quis.
Duis et venenatis felis, congue rutrum mauris. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
Duis fringilla magna nibh. Maecenas urna dui, tempor sit amet tincidunt at, venenatis ac nunc.
Vestibulum porta purus id metus iaculis, ac tempus ante ornare. Mauris fringilla tellus diam, at viverra metus accumsan ut.
Morbi molestie tellus sed massa vestibulum, a consequat velit rhoncus.
Pellentesque lacinia nisi ut purus bibendum, ac ultrices diam pulvinar.
Pellentesque tincidunt, nibh at scelerisque rhoncus, sapien tortor malesuada dolor, et rutrum quam mi id arcu.
Aliquam mauris ex, dictum ac volutpat in, interdum sed augue.
Duis sit amet sem non felis mollis fringilla vitae ut libero.
Integer ligula neque, tristique sed quam ac, interdum fringilla turpis.
Cras semper odio in turpis mattis sollicitudin. Proin odio metus, scelerisque ac elit id, euismod viverra massa.
Cras ut venenatis nibh, at fringilla odio. Aenean laoreet arcu a diam ultrices, non ornare libero malesuada.
Curabitur molestie faucibus elit vel pulvinar. Aenean eu sem feugiat ex posuere efficitur.
Mauris ut dui pulvinar, consectetur mauris condimentum, euismod lorem. Vivamus mollis consectetur euismod.
Sed eget ipsum lobortis, rhoncus ipsum vitae, mollis sapien. Curabitur ac venenatis odio, eget pharetra arcu.
Quisque semper sit amet elit quis molestie. Mauris pulvinar massa orci, vel scelerisque augue egestas eu.
Etiam efficitur ante vitae mauris efficitur, a porttitor ex gravida. Nam non molestie nulla, ac blandit sapien.
Aliquam aliquet ac ex sit amet faucibus.
Integer faucibus, orci in iaculis pellentesque, turpis ex rutrum leo, sed cursus purus dolor vel velit.
Aliquam eu massa at augue rhoncus hendrerit. Aliquam consectetur ipsum id lobortis suscipit.
Pellentesque et odio vitae quam venenatis molestie in et libero. Nam sapien lorem, cursus quis molestie et, aliquet a nibh.
Duis placerat blandit auctor. Duis sit amet lorem ac justo imperdiet iaculis.
Donec mattis, neque non varius aliquam, odio neque aliquet ex, eu ultrices ipsum arcu at enim.
Nam finibus porttitor dictum. Nullam accumsan tempus augue, quis sodales nulla laoreet quis.
Duis elementum consequat leo et fringilla. Nunc non est vel nisi rutrum rhoncus. Maecenas aliquam pharetra massa euismod ultrices.
Fusce ultricies dui nec consequat euismod. Sed nec nisi quis nibh semper facilisis in in elit. Ut a ultrices enim, sed fringilla felis.
Proin non lacus ut ante luctus gravida id in purus. Nulla venenatis convallis purus et dictum.
Aenean et fringilla nisi, at porta tortor. Curabitur mattis porttitor turpis quis gravida.
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer a orci tempor, semper purus vitae, tempus dolor.
Donec tellus nunc, ultrices a aliquam nec, lobortis eget urna. Nam eros augue, posuere id facilisis eu, accumsan ac mi.
Duis eros ex, fermentum eget lectus sit amet, suscipit accumsan sem. Ut ut efficitur velit. Integer et neque risus.
Nulla nec tellus ultrices, rutrum nunc a, gravida lorem. Nunc felis leo, lacinia id ex at, laoreet imperdiet est.
Etiam ut lorem fermentum, pellentesque massa at, aliquet libero. Cras vestibulum finibus sapien, eget elementum massa interdum quis.
Donec consequat, nulla condimentum suscipit efficitur, lectus risus porta diam, eget malesuada urna metus sit amet eros.</string>
    <string name="AjwadImg">TODO</string>
    <string name="FaizanImg">TODO</string>
    <string name="ajwad_mir">Ajwad Mir</string>
    <string name="faizan_tanveer">Faizan Tanveer</string>
    <string name="SongImg">Song Image</string>
    <string name="Album_image">Album_image</string>
    <string name="PlayButton">PlayButton</string>
    <string name="StopButton">StopButton</string>
    <string name="PauseButton">PauseButton</string>
    <string name="song_name">song name</string>
    <string name="AlbumArt">TODO</string>
    <string name="PreviousButton">PreviousButton</string>
    <string name="NextButton">NextButton</string>
    <string name="Pause">Pause</string>
    <string name="Next">Next</string>
    <string name="Prev">Prev</string>
    <string name="diets">Diets</string>
    <string name="leaderBoard">LeaderBoard</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="display_name">Display Name</string>
    <string name="RegisterProfilePic">TODO</string>
    <string name="user_real_name">User Real Name</string>
    <string name="user_display_name">User Display Name</string>
    <string name="settings_profile_pic">Settings Profile Pic</string>
    <string name="ExerciseAdd">ExerciseAdd</string>
    <string name="todo">TODO</string>
    <string name="title_activity_exercise_create_new_home">ExerciseCreateNewHomeActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="create_a_new_exercise_list">Create a new Exercise List</string>
    <string name="test_title_1">Test Title 1</string>
    <string name="Test_Date_Created">01/01/2021</string>
    <string name="Created_On">Date Created:</string>
    <string name="Created_By">Created By:</string>
    <string name="dummy_title">Dummy Title</string>
    <string name="exercise_id">Exercise ID:</string>
    <string name="dummy_id">Dummy ID</string>
    <string name="dummy_creator">dummy creator</string>
    <string name="exercise_Created_By">Created By:</string>
    <string name="exercise_Date_Created">Date Created:</string>
    <string name="_01_01_2021">01/01/2021</string>
    <string name="enter_your_exercise_name">Enter Your Exercise Name</string>
    <string name="set_timer_of_this_exercise">Set timer of this exercise</string>
    <string name="add_a_new_exercise_in_the_list">Add a new exercise in the list</string>
    <string name="save_this_list_in_the_database">Save this list in the database</string>
    <string name="exercise_Timer">Exercise Timer:</string>
    <string name="exercise_title">Exercise Title:</string>
    <string name="date_created">Date Created:</string>
    <string name="TestOutput">TestOutput</string>
    <string name="workout_id">Workout ID:</string>
    <string name="Dummy_Workout_ID">1</string>
    <string name="workout_name">Workout Name:</string>
    <string name="test_workout_title">Test Workout Title</string>
    <string name="workout_timer">Workout Timer:</string>
    <string name="test_workout_timer">Test Workout Timer</string>
    <string name="exercise_name">Exercise Name:</string>
    <string name="user_name">User Name:</string>
    <string name="user_first_name">User First Name:</string>
    <string name="user_last_name">User Last Name:</string>
    <string name="dummy_first_name">Dummy First Name</string>
    <string name="dummy_last_name">Dummy Last Name</string>
    <string name="add_new_exercise">Add New Exercise</string>
    <string name="create_a_new_exercise">Create a new exercise</string>
    <string name="save_this_exercise_in_the_database">save this exercise in the database</string>
    <string name="ShoeImg">ShoeImg</string>
    <string name="shoe_name">Shoe Name:</string>
    <string name="shoe_brand">Shoe Brand:</string>
    <string name="distance_travelled">Distance Travelled:</string>
    <string name="dummy_shoe_name">dummy shoe name</string>
    <string name="dummy_shoe_brand">dummy shoe brand</string>
    <string name="dummy_distance">dummy_distance</string>
    <string name="enter_your_shoe_name">Enter your shoe name</string>
    <string name="add_shoe">Add Shoe</string>
    <string name="ShoeBrand_Instruction">Select any brand from the given ones</string>
    <string name="no_shoe_list_available">No Shoe List Available</string>
    <string name="add_workout_in_this_exercise">Add Workout In This Exercise</string>
    <string name="enter_your_workout_name">Enter your workout name</string>
    <string name="enter_number_of_reps_of_this_workout">Enter number of reps of this workout</string>
    <string name="add_another_workout">Add Another Workout</string>
    <string name="save_this_workout_list">Save this workout list</string>
    <string name="number_of_reps">Number of Reps:</string>
    <string name="dummy_reps">dummy_reps</string>
    <string name="start_workout">Start Workout</string>
    <string name="workout_reps">workout reps</string>
    <string name="finish">Finish</string>
    <string name="congratulations">Congratulations</string>
    <string name="go_back_to_main_menu">Go Back To Main Menu</string>


</resources>