<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="8dp"
    app:cardBackgroundColor="@color/teal_700"
    app:cardCornerRadius="30dp"
    app:cardElevation="20dp"
    app:contentPadding="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/WorkoutName_Input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/exercise_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/WorkoutReps_Input"
            app:layout_constraintEnd_toStartOf="@+id/WorkoutName_Output"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/WorkoutReps_Input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/date_created"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/exercisecreator_Input"
            app:layout_constraintEnd_toStartOf="@+id/WorkoutReps_Output"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/WorkoutName_Input" />

        <TextView
            android:id="@+id/exercisecreator_Input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/Created_By"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/exercisecreator_Output"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/WorkoutReps_Input" />

        <TextView
            android:id="@+id/WorkoutName_Output"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/dummy_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/WorkoutReps_Output"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/WorkoutName_Input"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/WorkoutReps_Output"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/Test_Date_Created"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/exercisecreator_Output"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/WorkoutReps_Input"
            app:layout_constraintTop_toBottomOf="@+id/WorkoutName_Output" />

        <TextView
            android:id="@+id/exercisecreator_Output"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/dummy_creator"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/exercisecreator_Input"
            app:layout_constraintTop_toBottomOf="@+id/WorkoutReps_Output" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>